tests/compiler/cannot_invoke_non_function_1.kk.out
error: Cannot call a non-function
 --> tests/compiler/cannot_invoke_non_function_1.kk:2:14
  |
1 | let x = 2
2 | let f = 'hi'.x
  |              ^
  |

The type of this expression is not function, so you cannot call it.
