tests/compiler/cannot_invoke_non_function_1.kk
let x = 2
let f = 'hi'.x
